--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
                 </ul>
             </div>
         </nav>
+        <div class="banner">
+            <div class="baner-content">
+                <h3>Hi, I  am</h3>
+                <h1>Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="primary-btn" >Download CV</button>
+                <button class="primary-btn">Contuct</button>
+            </div>
+            <div>
+                <img src="./images/hardy.png" alt="">
+            </div>
+        </div>
     </header>
 
     <main>
