--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         </label>
                         <textarea name="" id="" cols="20" rows="10" placeholder="Message"></textarea>
     
-                        <input class="primary-btn" type="submit" value="Submit">
+                        <div class=""><input class="primary-btn" type="submit" value="Submit"></div>
                         
                     </form>
                 </div>
