--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&family=Roboto+Slab:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./style/style.css">
+
+    <script src="https://kit.fontawesome.com/d5c99b5a88.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -31,8 +33,8 @@
                 <h3>Hi, I  am</h3>
                 <h1>Mary Hardy</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="primary-btn" >Download CV</button>
-                <button class="primary-btn">Contuct</button>
+                <button class="primary-btn" > <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="primary-btn"> <i class="fa-solid fa-phone"></i> Contuct</button>
             </div>
             <div class="banner-img">
                 <img src="./images/hardy.png" alt="">
@@ -154,7 +156,7 @@
                 
             </div>
             <div class="dow-cv">
-                <button class="primary-btn">Download CV</button>
+                <button class="primary-btn"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
 
